--- a/website/templates/background.html
+++ b/website/templates/background.html
@@ -8,18 +8,17 @@
 <div class="flex" x-data="main">
     <div class="flex vertical start">
         <h1>{{ background.name }}</h1>
-        {% if user.id == cruleset.userid %}
-        <a href="/Character/Background/{{ background.name }}/Duplicate"><button type="button">Duplicate {{ background.name }}</button></a>
-        {% endif %}
         <div class="usercontent" x-html="convert(`{{ background.text }}`)"></div>
         {% for feature in background.background_features %}
         <h2>{{ feature.name }}</h2>
         <div class="usercontent" x-html="convert(`{{ feature.text }}`)"></div>
         {% endfor %}
         {% if cruleset.userid == current_user.id %}
-        <a href="/Character/Backgrounds/Duplicate/{{ background.name }}"><button type="button">Duplicate {{ background.name }}</button></a>
-        <a href="/Character/Backgrounds/Edit/{{ background.name }}"><button type="button">Edit {{ background.name }}</button></a>
-        <a href="/Character/Backgrounds/Delete/{{ background.name }}"><button type="button" class="mild danger">Delete {{ background.name }}</button></a>
+        <div class="interior flex horizontal center">
+            <a href="/Character/Backgrounds/Duplicate/{{ background.name }}"><button type="button">Duplicate {{ background.name }}</button></a>
+            <a href="/Character/Backgrounds/Edit/{{ background.name }}"><button type="button">Edit {{ background.name }}</button></a>
+            <a href="/Character/Backgrounds/Delete/{{ background.name }}"><button type="button" class="mild danger">Delete {{ background.name }}</button></a>
+        </div>
         {% endif %}
     </div>
 </div>
