--- a/website/templates/backgrounds.html
+++ b/website/templates/backgrounds.html
@@ -13,36 +13,15 @@
 			{
 				name: '{{ background.name }}',
 				skills: {{ background.skills }},
-				languages: '{{ background.languages }}',
-				equipment: {{ background.equipment }}
+				languages: {{ background.languages }},
+				equipment: {{ background.equipment }},
+				tools: {{ background.tools }}
 			}
 		)"></template>
 		{% endfor %}
-		<template x-init="truncateEquipment(); console.log(bgROM)"></template>
+		<template x-init="truncateEquipment()"></template>
 		<h1>Backgrounds</h1>
 		<input type="text" name="tableinput" id="tableinput" placeholder="Search Backgrounds..." x-model="query">
-		<div class="interior flex horizontal center" style="width: calc(100% - 24px); padding: 12px; background-color: var(--nord-inactive); margin: 12px">
-			<form class="interior flex horizontal start" style="width: 100%; box-sizing: border-box; margin: 0px; background-color: inherit">
-				<div class="interior flex horizontal center" style="width: 100%; background-color: inherit" @click="toggleSkills()">
-					<label for="skills" style="box-sizing: border-box; width: 50%; min-width: 64px; background-color: inherit"><a>Skills:</a></label>
-					<div class="interior flex horizontal end" style="box-sizing: border-box; width: 50%; min-width: 64px; margin: 0; background-color: inherit">
-						<label for="filtertype" style="box-sizing: border-box; max-width: 128px">Filter Type: </label>
-						<select name="filtertype" id="filtertype" style="box-sizing: border-box; max-width: 96px" x-model="filtertype">
-							<option value="true">AND</option>
-							<option value="false">OR</option>
-						</select>
-					</div>
-				</div>
-				<div name="skills" id="skills" style="width: 100%" x-show="skillshow">
-					{% for skill in cruleset.skills %}
-					<div>
-						<input type="checkbox" x-model="skilltoggles[{{ loop.index0 }}]" style="width: auto">
-						<label>{{ skill.name }}</label>
-					</div>
-					{% endfor %}
-				</div>
-			</form>
-		</div>
 		<table name="filtertable" id="filtertable">
 			<tr class="header">
 				<th style="width: 25%">Background Name</th>
@@ -54,9 +33,9 @@
 			<template x-for="background, index in filterQuery()">
 				<tr>
 					<td><a @click="window.location.href = '/Character/Background/' + background.name" x-text="background.name"></a></td>
-					<td x-text="background.skills"></td>
-					<td x-text="background.tools"></td>
-					<td x-text="background.languages"></td>
+					<td x-text="lstostr(background.skills)"></td>
+					<td x-text="lstostr(background.tools)"></td>
+					<td x-text="lstostr(background.languages)"></td>
 					<td x-text="background.equipment"></td>
 				</tr>
 			</template>
