--- a/website/templates/master.html
+++ b/website/templates/master.html
@@ -61,14 +61,13 @@
 	<li id="nav-tools" class="dropdown nav-item">
 		<a href="#">Tools</a>
 		<div class="dropdown-content">
-			<a href="/Tools/VTT">Virtual Tabletop</a>
+			<!-- <a href="/Tools/VTT">Virtual Tabletop</a> -->
 			<a href="/Tools/NPC-Gen">NPC Generator</a>
 			<a href="/Tools/Backstory-Gen">Backstory Generator</a>
-			<a href="/Tools/CR-Calc">CR Calculator</a>
-			<a href="/Tools/Encounter-Gen">Encounter Generator</a>
-			<a href="/Tools/Loot-Gen">Loot Generator</a>
+			<!-- <a href="/Tools/CR-Calc">CR Calculator</a> -->
+			<!-- <a href="/Tools/Encounter-Gen">Encounter Generator</a> -->
+			<!-- <a href="/Tools/Loot-Gen">Loot Generator</a> -->
 			<a href="/Tools/Stat-Gen">Stat Generator</a>
-			<a href="/Tools/Backstory">Backstory Generator</a>
 		</div>
 	</li>
 	{% if user.is_authenticated %}
@@ -76,7 +75,6 @@
 			<a href="/My-Account">My Account</a>
 			<div class="dropdown-content" style="right: 0px">
 				<a href="/My-Rulesets">My Rulesets</a>
-				<!-- <a href="/My-PCs">My CharacYou can speak, read, and write Common and Draconic. Draconic is thought to be one of the oldest languages and is often used in the study of magic. The language sounds harsh to most other creatures and includes numerous hard consonants and sibilants. -->
 				<a href="/Logout">Log Out</a>
 			</div>
 		</li>
