--- a/website/templates/create-race.html
+++ b/website/templates/create-race.html
@@ -27,7 +27,7 @@
 				<input 
 					style="width: calc(100% / 6 - 24px); min-width: 55px; font-size: 16px" 
 					type="number" 
-					placeholder="{{ score.abbr }} Bonus" 
+					placeholder="{{ score.abbr.capitalize() }} Bonus" 
 					name="asi" 
 					id="asi" 
 					x-model="asis.{{ score.abbr }}"
