--- a/website/templates/feat.html
+++ b/website/templates/feat.html
@@ -13,9 +13,11 @@
         {% endif %}
         <div class="usercontent" x-html="convert(`{{ feat.text }}`)"></div>
         {% if cruleset.userid == current_user.id %}
+        <div class="interior flex horizontal center">
             <a href="/Character/Feats/Duplicate/{{ feat.name }}"><button type="button">Duplicate {{ feat.name }}</button></a>
             <a href="/Character/Feats/Edit/{{ feat.name }}"><button type=button>Edit {{ feat.name }}</button></a>
             <a href="/Character/Feats/Delete/{{ feat.name }}"><button type="button" class="mild danger">Delete {{ feat.name }}</button></a>
+        </div>
         {% endif %}
     </div>
 </div>
