some cleanup. also started adding subdomain stuff. also started adding logic for planned features that will not be complete in initial release. app is broken. This really should have been split into like 8 commits. This commit is huge.

--- a/website/templates/import-background.html
+++ b/website/templates/import-background.html
@@ -4,9 +4,9 @@
 {% endblock %}
 
 {% block instructionsone %}
-<label for="feature_file"><h2>Race Features (races.json)</h2></label>
+<label for="feature_file"><h2>Background Features (backgrounds.json)</h2></label>
 {% endblock %}
 
 {% block instructionstwo %}
-<label for="flavor_file"><h2>Race Flavor Text (fluff-races.json)</h2></label>
+<label for="flavor_file"><h2>Background Flavor Text (fluff-backgrounds.json)</h2></label>
 {% endblock %}
